# htg

./: .dockerignore  .gitignore  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  python-release.yml  release.yml
benchmarks/: README.md  benchmark.py  benchmark_all_libraries.py  benchmark_all_three.py  benchmark_comparison.py  create_test_tiles.py  docker-compose.bench.yml  requirements.txt  results.json
docker/: README.md
htg/: Cargo.toml  README.md
htg-cli/: Cargo.toml
htg-cli/src/: main.rs
htg-cli/src/commands/: batch.rs  info.rs  list.rs  mod.rs  query.rs
htg-python/: Cargo.toml  README.md  pyproject.toml
htg-python/python/htg/: __init__.py  __init__.pyi
htg-python/python/srtm/: __init__.py  __init__.pyi
htg-python/python/srtm_rs/: __init__.py  __init__.pyi
htg-python/src/: lib.rs
htg-service/: Cargo.toml
htg-service/src/: handlers.rs  lib.rs  main.rs
htg-service/tests/: api_tests.rs
htg/benches/: elevation.rs
htg/examples/: basic.rs  interpolation.rs
htg/src/: download.rs  error.rs  filename.rs  geojson.rs  lib.rs  service.rs  tile.rs
scripts/: .gitignore  BENCHMARK_RESULTS.md  compare_elevations.py  pyproject.toml
