[package]
name = "htg-cli"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Sánchez Martínez <pedrosanzmtz@users.noreply.github.com>"]
description = "Command-line tool for SRTM elevation queries"
license = "MIT"
repository = "https://github.com/pedrosanzmtz/htg"

[[bin]]
name = "htg"
path = "src/main.rs"

[dependencies]
htg = { path = "../htg", features = ["download", "geojson"] }

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# File processing
csv = "1.3"
geojson = "0.24"

# Progress bars
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1.0"
