[package]
name = "htg-service"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Sanz Martinez <pedrosanzmtz@users.noreply.github.com>"]
description = "HTTP microservice for SRTM elevation queries"
license = "MIT"
repository = "https://github.com/pedrosanzmtz/htg"

[dependencies]
htg = { path = "../htg" }

# HTTP dependencies will be added in Phase 4
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# tower = "0.4"
# tower-http = { version = "0.5", features = ["cors", "trace"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
