[package]
name = "htg-service"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Sanz Martinez <pedrosanzmtz@users.noreply.github.com>"]
description = "HTTP microservice for SRTM elevation queries"
license = "MIT"
repository = "https://github.com/pedrosanzmtz/htg"

[dependencies]
htg = { path = "../htg", features = ["download"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geojson = "0.24"

# Middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
axum-test = "16"
tempfile = "3.8"
