[package]
name = "htg"
version = "0.3.4"
edition = "2021"
authors = ["Pedro Sánchez Martínez <pedrosanzmtz@users.noreply.github.com>"]
description = "High-performance SRTM elevation data library"
license = "MIT"
repository = "https://github.com/pedrosanzmtz/htg"
keywords = ["srtm", "elevation", "gis", "geography", "hgt"]
categories = ["science::geo", "data-structures"]
readme = "README.md"

[features]
default = []
download = ["dep:reqwest", "dep:flate2"]
geojson = ["dep:geojson"]

[dependencies]
memmap2 = "0.9"
moka = { version = "0.12", features = ["sync"] }
thiserror = "1.0"

# Optional dependencies for download feature
reqwest = { version = "0.12", features = ["blocking"], optional = true }
flate2 = { version = "1.0", optional = true }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Optional dependency for geojson feature
geojson = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = "3.8"
